Fix H-E stained figures. Setup PSR 40x figure

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -197,32 +197,45 @@ These differences in Suppleness and Compressibility were tested for significance
 The differences between skin types ( wrinkled and wrinkle-free) were significaant for both Suppleness and Compressibility. Flock differences were not significant.
 
 \subsection{Skin tissue Morphology}
-The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed consistent visual differences in their tissue structure. Figure~\ref{fig:trial1he} shows vertical sections stained with H-E from the wrinkled and wrinkle-free pair of sheep from flock 2.
+The pairs of wrinkle free and wrinkled sheep from each flock in Trial 1 showed consistent visual differences in their tissue structure. Figure~\ref{fig:trial24xhe} shows vertical sections stained with H-E from the wrinkled and wrinkle-free pair of sheep from flock 2.
 
-\input{figtrial1he.tex}
+\input{figtrial24xhe.tex}
 
-The wrinkled sheep has a considerably greater amount of haematoxylin stained connective tissue in the lower dermis below the deepest follicle bulbs and to some extent in between the deepest bulbs. Also the follicles in the wrinkled sheep are at a variety of angles and are curved, as evidenced by the follicle shafts being sectioned and the follicle bulb being elliptical indicating sectioning at an angle. In contrast the wrinkle-free sheep has only a minimum amount of haematoxylin stained connective tissue below the follicle bulbs, and the sectioned follicles are more uniform. 
-These differences were consistent across all 6 flocks in Trial 1.
+The wrinkled sheep has a greater amount of staining in the  connective tissue in the lower dermis below the deepest follicle bulbs and to some extent in between the deepest bulbs. The staining also seems to be in larger clumps in the wrinkled sheep, whereas in the wrinkle-free sheep the lower dermal connective tissue has a finer more regular structure. 
 
-Because the Trial 1 biopsy samples were trimmed before sectioning, we can not be sure if the apparent extra connective tissue in the wrinkled sheep extends right to the bottom of the lower dermis or into Layer 4.  We can check on this by looking at Trial 2 specimens, which were nt trimmed before sectioning. Figure~\ref{fig:trial2he} shows one example section whch is from a wrinkled sheep from Flock 1 of Trial 2.
+  The follicles in the wrinkled sheep are at a variety of angles and are curved, as evidenced by the follicle shafts being sectioned and the follicle bulb being elliptical indicating sectioning at an angle. In contrast in the wrinkle-free sheep the sectioned follicles are more uniform. 
+
+These differences were consistent across all sheep.
+
+Although the Trial 2 biopsy samples were not trimmed before sectioning, the specimens displayed in Figure~\ref{fig:trial24xhe} do not show any layers below Layer 3. We need to see what connective tissue is present in Layer 4 (muscle layer). 
+\begin{verbatim}
+Sanaz, do you know why these sections have Layer 4 trimmed ? 
+They are from Trial 2, and should be untrimmed.
+The only images of untrimmed samples that I could find were the two below which came to me from Jim by email. There are none in his computer files which Sally retrieved for me?
+\end{verbatim}
+
+  We can check on this by looking at a specimen , which was not trimmed before sectioning. Figure~\ref{fig:trial2he} shows one example section which is from a wrinkled sheep from Flock 1 of Trial 2.
 \input{figtrial2he.tex}
 
-It is clear from Figure~\ref{fig:trial2he} that the connective tissue in Layer 3 (lower or reticular dermis) does not extend further into Layer 4 (muscle layer). The muscle layer has only stained with the pink eosin counterstain and does not show the reticular structure of the connective tissue.
+It is clear from Figure~\ref{fig:trial2he} that the connective tissue in Layer 3 (lower or reticular dermis) does not extend further into Layer 4 (muscle layer). The muscle layer has only stained with the pink eosin counterstain and does not show the reticular structure of  connective tissue, except perhaps for  thin bands above and below the muscle mass. 
 
 We are therefore concerned with the nature of this connective tissue in the lower dermis only. We wish to quantify and qualify the way in which it differs between wrinkled and wrinkle-free sheep.
 
 \subsection{Detailed morphology of connective tissue} 
 The stain picrosirius red (PSR) was used to differentiate collagen from other components of connective tissue. Figure~\ref{fig:trial2psr} shows a section from the same sheep as Figure~\ref{fig:trial2he} examined with normal bright field microscopy. 
 \input{figtrial2psr.tex}
-The collagen is red. There is some collagen showing in the Layer 3 (papillary dermis), a dense band of collagen in Layer 3, and Layer 4 consists of yellow stained muscle tissue with a band of red collagen above and below it.  Fibres and follicle bulbs are stained yellow bty the picric acid component of PSR.
+The collagen is red. There is some collagen showing in the Layer 3 (papillary dermis), a dense band of collagen in Layer 3 (subpapillary dermis), and Layer 4 consists of yellow stained muscle tissue with a band of red collagen above and below it.  Fibres and follicle bulbs are stained yellow bty the picric acid component of PSR.
 
-So we can conclude that the large amount of connective tissue in Layer 3 of wrinkled sheep contains collagen. 
+So we can conclude that the  connective tissue in Layer 3 of wrinkled sheep contains collagen. 
 
 \subsubsection{Amount of collagen}
-To quantify the amount of collagen in Layer 3, 5 fields under a 40x objective were chosen at random from within Layer 3 (reticular dermis) of each PSR stained section from each sheep in Trials 1 and 2. A typical image from one field is shown in Figure~\ref{fig:psr40x}.
-%\input{figpsr40x.tex}
+Since the nature of the connective tissue in Layer 3 is what seems to differ between wrinkled and wrinkle-free sheep, we attempt to quantify the difference in amount of collagen to see if this explains the observed difference in appearance.
 
- The image analysis procedure described in the methods wa sused to count red stained pixels in each field. The mean red pixel count for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
+To quantify the amount of collagen in Layer 3, 5 fields under a 40x objective were chosen at random from within Layer 3 (reticular dermis) of each PSR stained section from each sheep in Trials 1 and 2. A typical image from one field of a wrinkled and a wrinke-free sheep is shown in Figure~\ref{fig:psr40x}.
+\input{figpsr40x.tex}
+The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the difference between wrinkled and wrinkle-free sheep. They show that the collagen in Layer 3 of wrinkled sheep is in larger aggregates and suggest that there is more collagen present ( as evidenced by more red stained areas) in wrinkled sheep. We set out to confirm this with some quantitative data.
+
+ The image analysis procedure described in the methods was used to count red stained pixels in each field. The mean red pixel count for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
 %\input{figredpixt1.tex}
 %\input{figredpixt2.tex}
 Pixel counts are expressed as a percentage of the total number of pixels in the image taken with a 40x objective.
