--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -240,6 +240,10 @@ The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the
 %\input{figredpixt2.tex}
 Pixel counts are expressed as a percentage of the total number of pixels in the image taken with a 40x objective.
 
+THe significance of the differences apparent in Figure~\ref{fig:redpixt1} was tested by analysis of variance extracting terms for FlockNo, SkinType, and their interaction, as shown in Figure~\ref{tab:redpixelt1aov}.
+\input{tabredpixelt1aov.tex}
+The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be highly significant.
+
 
 
 
