add comment re pixel data - what is it exactly?

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -240,10 +240,16 @@ The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the
 %\input{figredpixt2.tex}
 Pixel counts are expressed as a percentage of the total number of pixels in the image taken with a 40x objective.
 
-THe significance of the differences apparent in Figure~\ref{fig:redpixt1} was tested by analysis of variance extracting terms for FlockNo, SkinType, and their interaction, as shown in Figure~\ref{tab:redpixelt1aov}.
+The significance of the differences apparent in Figure~\ref{fig:redpixt1} was tested by analysis of variance extracting terms for FlockNo, SkinType, and their interaction, as shown in Figure~\ref{tab:redpixelt1aov}.
 \input{tabredpixelt1aov.tex}
 The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be highly significant.
 
+\begin{verbatim}
+There are some questions hanging over these data.
+The data can not be pixel counts, because they are not intwgers. 
+They must be something like counts weighted by the intensity of redness of each pixel, or something similar.
+Sanaz, can you please find out exactly what the data are?
+\end{verbatim}
 
 
 
