Start on follicle survature results

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -246,12 +246,30 @@ The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between ran
 
 \begin{verbatim}
 There are some questions hanging over these data.
-The data can not be pixel counts, because they are not intwgers. 
-They must be something like counts weighted by the intensity of redness of each pixel, or something similar.
+The data can not be pixel counts, because they are not integers. 
+They must be something like counts weighted by the intensity of redness
+ of each pixel, or something similar.
 Sanaz, can you please find out exactly what the data are?
 \end{verbatim}
 
 
+\subsubsection{Size of collagen fibrils}
+
+\subsubsection{Type of collagen}
+
+\subsection{Follicle curvature}
+\subsubsection{Follicle curvature scores}
+Follicle curvature scores were available for Trial 1. The scores for each sheep are shown on Table~\ref{tab:curv}
+\input{tabcurv.tex}
+In each case except for Flock 4, the wrinkle-free sheep had a lower follicle curvature score than the wrinkled sheep.
+
+An analysis of variance of these scores is given in Table~\ref{tab:curvaov}
+\input{tabcurvaov.tex}
+This shows that the difference between wrinkle-free and wrinkled sheep was significant at the 1 percent level.
+
+\subsubsection{Follicle curvature measurements}
+
+\subsection{Follicle density and S/P ratio}
 
 \clearpage
 \section{Discussion}
