--- a/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelt1aov.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelt1aov.tex
@@ -2,7 +2,7 @@
 % Mon Jul 15 21:10:57 2019
 \begin{table}[ht]
 \centering
-\caption{Analysis of variance of red pixel counts for Trial 1}
+\caption{Analysis of variance of red pixel optical density sums for Trial 1}
 \label{tab:redpixelt1aov}
 \begin{tabular}{lrrrrr}
   \hline
