Fix aov tables of pixel density for Trial1 and Trial2

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -237,17 +237,20 @@ To quantify the amount of collagen in Layer 3, 5 fields under a 40x objective we
 \input{figpsr40x.tex}
 The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the difference between wrinkled and wrinkle-free sheep. They show that the collagen in Layer 3 of wrinkled sheep is in larger aggregates and suggest that there is more collagen present ( as evidenced by more red stained areas) in wrinkled sheep. We set out to confirm this with some quantitative data.
 
- The image analysis procedure described in the methods was used to assess the amount of red stained pixels in each field.  What was actually calculated was the sum of the calibrated optical densities of all the pixels in the red image. The mean red pixel optical density sum for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
+ The image analysis procedure described in the methods was used to assess the total amount of red stained pixels in each field.  What was actually calculated was the sum of the calibrated optical densities of all the pixels in the red image. The integrated (ie summed over all pixels) red pixel optical density for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
 %\input{figredpixt1.tex}
 %\input{figredpixt2.tex}
 The total number of pixels in an image taken with a 40x objective was 1920000, so one could scale these optical density sums to the average optical density of a pixel by dividing by 1920000.
 
 The significance of the differences apparent in Figure~\ref{fig:redpixt1} was tested by analysis of variance extracting terms for FlockNo, SkinType, and their interaction, as shown in Table~\ref{tab:redpixelt1aov}.
 \input{tabredpixelt1aov.tex}
-The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be highly significant.
+The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen, because there are no replicate sheep within each Flock:SkinType subclass. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be highly significant. The Flock differences are also significant, and there is an interaction.
 
 The equivalent analysis of variance for Trial 2 (Figure~\ref{fig:redpixt2}) data is shown in Table~\ref{tab:redpixelt2aov}.
 \input{tabredpixelt2aov.tex}
+The difference between wrinkled and wrinkle-free SkinTypes is again shown to be highly significant. The Flock differences are also significant and there is a large interaction of Flock with SkinType. The two Flocks in Trial 2 were quite diffferent. Flock 6 had a much wider range of SkinTypes from which to choose sheep. This is reflected in a much wider difference in amount of collagen between the wrinkled and wrinkle-free sheep in Flock 6. 
+
+ The on-wrinkle and between-wrinkle sampling positions within the wrinkled specimens were significantly different but the size of the difference was only 33257 units and was in the opposite of the expected direction. The on-wrinkle specimens actually had a lower integrated optical density than the between-wrinkle specimens indicating slightly {\em less} collagen on a wrinkle than between wrinkles.
 
 \begin{verbatim}
 There are some questions hanging over these data.
