--- a/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelt2aov.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelt2aov.tex
@@ -1,18 +1,21 @@
 % latex table generated in R 3.4.2 by xtable 1.8-2 package
-% Mon Jul 15 21:10:57 2019
+% Wed Jul 24 20:43:14 2019
 \begin{table}[ht]
 \centering
+
 \caption{Analysis of variance of red pixel optical density sums for Trial 2}
 \label{tab:redpixelt2aov}
+
 \begin{tabular}{lrrrrr}
   \hline
  & Df & Sum Sq & Mean Sq & F value & Pr($>$F) \\ 
   \hline
-FlockNo & 1 & &  &  &  \\ 
-  SkinType & 1 &  &  &  &  \\ 
-  FlockNo:SkinType & 1 &  &  &  &  \\ 
-  SampPos & 1 & & & & \\
-  Residuals &  &  &  &  &  \\ 
+FlockNo                  & 1 & 91548864255.47 & 91548864255.47 & 37.41 & 0.0000 \\ 
+  SkinType                 & 1 & 412338258758.73 & 412338258758.73 & 168.48 & 0.0000 \\ 
+  SampPos                  & 1 & 50325174039.48 & 50325174039.48 & 20.56 & 0.0000 \\ 
+  FlockNo:SkinType         & 1 & 101676878442.96 & 101676878442.96 & 41.55 & 0.0000 \\ 
+  FlockNo:SkinType:SheepNo & 49 & 1081769314333.64 & 22076924782.32 & 9.02 & 0.0000 \\ 
+  Residuals                & 218 & 533522617623.69 & 2447351456.99 &  &  \\ 
    \hline
 \end{tabular}
 \end{table}
