--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -244,13 +244,24 @@ The total number of pixels in an image taken with a 40x objective was 1920000, s
 
 The significance of the differences apparent in Figure~\ref{fig:redpixt1} was tested by analysis of variance extracting terms for FlockNo, SkinType, and their interaction, as shown in Table~\ref{tab:redpixelt1aov}.
 \input{tabredpixelt1aov.tex}
-The residual term in Figure~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen, because there are no replicate sheep within each Flock:SkinType subclass. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be highly significant. The Flock differences are also significant, and there is an interaction.
+The residual term in Table~\ref{tab:redpixelt1aov} is the variation between randomly chosen Fields within a specimen, because there are no replicate sheep within each Flock:SkinType subclass. The difference between the wrinkled and wrinkle-free SkinTypes is shown to be significant but only at the 5\% level. The Flock differences are not significant, and there is an interaction.
 
 The equivalent analysis of variance for Trial 2 (Figure~\ref{fig:redpixt2}) data is shown in Table~\ref{tab:redpixelt2aov}.
 \input{tabredpixelt2aov.tex}
-The difference between wrinkled and wrinkle-free SkinTypes is again shown to be highly significant. The Flock differences are also significant and there is a large interaction of Flock with SkinType. The two Flocks in Trial 2 were quite diffferent. Flock 6 had a much wider range of SkinTypes from which to choose sheep. This is reflected in a much wider difference in amount of collagen between the wrinkled and wrinkle-free sheep in Flock 6. 
+The difference between wrinkled and wrinkle-free SkinTypes is now shown to be highly significant. The Flock differences were not significant and there is a significant interaction of Flock with SkinType.  
 
- The on-wrinkle and between-wrinkle sampling positions within the wrinkled specimens were significantly different but the size of the difference was only 33257 units and was in the opposite of the expected direction. The on-wrinkle specimens actually had a lower integrated optical density than the between-wrinkle specimens indicating slightly {\em less} collagen on a wrinkle than between wrinkles.
+ The on-wrinkle and between-wrinkle sampling positions within the wrinkled specimens were not significantly different . The on-wrinkle specimens actually had a lower integrated optical density than the between-wrinkle specimens indicating slightly {\em less} collagen on a wrinkle than between wrinkles.
+
+There was also a significant amount of variation between sheep within the FlockNo and SkinType combinations. Sheep are much more variable than image Fields within a sheep, which is what the Residual term in Table~\ref{tab:redpixelt2aov} represents. In this analysis the Sheep term is the error term for all terms above it in the analysis of variance table, whereas in Trial 1 there was no sheep replication and we were forced to use the FlockNo:SkinType term as the error. This explains why the SkinType differences were less significant in Trial 1. 
+
+The actual means and their standard errors for integrateds optical density for both Trial 1 and Trial 2 are shown in Table~\ref{tab:redpixelodmeans}
+\input{tabredpixelodmeans.tex}
+We see that the wrinkle-free sheep actually have a very low amount of collagen in Trial 1. This is probably because the Trial 1 sheep were selected from SRS-Merino stud flocks and those chosen as wrinkle-free were likely to be extreme examples of wrinkle-free sheep, of a type not found in normal Merino flocks. 
+
+The Trial 2 sheep are the opposite. These were from commercial flocks, and here the wrinkled sheep ( either the on-wrinkle or between wrinkle specimens) had a higher amount of collagen than the wrinkled sheep from Trial 1. Again, this simply reflects the fact that more extreme wrinkled sheep were available for selection in rial 2. 
+
+The standard deviations were greater for wrinkled sheep, and greater for on-wrinkle than between-wrinkle specimens. Apparently wrinkled skins are more variable, at least in their collagen density. We did not test whether these differences in standard deviation were significant.
+
 
 \begin{verbatim}
 There are some questions hanging over these data.
