--- a/collagen-wrinkle-paper/nj-pgs-rewrite/tabmacro.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/tabmacro.tex
@@ -17,8 +17,10 @@
   3 & W555 & Wrinkle-free & 5 & 67 \\
   3 & W547 & Wrinkled     & 1 & 58 \\
   4 & W567 & Wrinkle-free & 5 & 70 \\
-  4 & W558 & Wrinkled     & 2 & 63 \\
-  5 & W283 & Wrinkle-free & 5 & 69 \\
+  4 & S558 & Wrinkled     & 2 & 63 \\
+  5 & Z529 & Wrinkle-free &   &    \\
+  5 & Z530 & Wrinkled     &   &    \\
+  5 & S283 & Wrinkle-free & 5 & 69 \\
   5 & W290 & Wrinkled     & 2 & 44 \\ \hline
 \end{tabular}
 \end{table}
