--- a/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelodmeans.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/tabredpixelodmeans.tex
@@ -7,13 +7,15 @@
 \caption{Means and standard errors for integrated red pixel optical density of wrinkled and wrinkle-free sheep in Trial 1 and Trial 2}
 \label{tab:redpixelodmeans}
 \vspace{0.1in}
-\begin{tabular}{|p{0.5in}|p{0.6in}|p{1.0in}|p{1.0in}|p{1.0in}|}  \hline
+\begin{tabular}{|p{0.4in}|p{0.6in}|p{0.9in}|p{0.9in}|p{0.9in}|}  \hline
      Trial & Parameter &  Wrinkle-free  &  Wrinkled (between-wrinkle) & Wrinkled (on-wrinkle)  \\ 
 \hline
   1  & Mean &   83748        &   215232   &       \\
-  1  & Standard deviation &   47535      &    98720   &  \\ \hline
+  1  & Standard deviation &   47535      &    98720   &  \\ 
+  1  & N                  &       6      &        6   &   \\ \hline
   2  & Mean &   280851       &   380427    &  347170   \\ 
-  2  & Standard deviation &    70609     &  75988  &  96787 \\ \hline
+  2  & Standard deviation &    70609     &  75988  &  96787 \\ 
+  2  & N                  &       18     &     18  &     18  \\ \hline
 \end{tabular}
 \end{table}
 
