Figure of red pixel od means for trial 2 both flocks

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -239,7 +239,7 @@ The two fields shown in Figure~\ref{fig:psr40x} were chosen to be typical of the
 
  The image analysis procedure described in the methods was used to assess the total amount of red stained pixels in each field.  What was actually calculated was the sum of the calibrated optical densities of all the pixels in the red image. The integrated (ie summed over all pixels) red pixel optical density for each sheep is shown  in Figure~\ref{fig:redpixt1} for Trial 1 and Figure~\ref{fig:redpixt2} for Trial 2.
 \input{figredpixt1.tex}
-%\input{figredpixt2.tex}
+\input{figredpixt2.tex}
 These data are intended as a measure of the total amount of collagen tissue present in the microscope section at the position of the chosen field in the lower dermis.
 The total number of pixels in an image taken with a 40x objective was 1920000, so one could scale these optical density sums to the average optical density of a pixel by dividing by 1920000. We chose not to do this scaling.
 We can see that for Trial 1 the wrinkle-free sheep always had less collagen, except for those in Flock 4. In Trial 2  the wrinkle-free sheep always had less collagen than the between-wrinkle sample from the wrinkled sheep, but the on-wrinkle sample was more variable.
