Methods - describe image analysis of PSR stained 40x fields Fix multiply defined labels

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/figredpixt2.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/figredpixt2.tex
@@ -5,13 +5,13 @@
 
 \begin{figure}[p]
 \centering
- \subfigure[Plate (i) Flock No 1 of Trial 2]{
-    \label{fig:redpixt2(i)}
+ \subfigure[Subfigure (i) Flock No 1 of Trial 2]{
+%   \label{fig:redpixt2(i)}
     \includegraphics[scale=0.50]{t2f1odmeans.png}
 % \includegraphics[width=1.0\textwidth]{w479-2-rigid.jpg}
   }
- \subfigure[Plate (ii) Flock No 2  of Trial 2]{
-    \label{fig:redpixt2(ii)}
+ \subfigure[Subfigure (ii) Flock No 2  of Trial 2]{
+%   \label{fig:redpixt2(ii)}
     \includegraphics[scale=0.50]{t2f2odmeans.png}
   }
   \caption{Integrated optical density of the red images of sections stained with PSR for each of the nine sheep in each Flock of Trial 2, averaged over five microscope fields}
