--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -108,18 +108,16 @@ For PSR collagen analysis, the 40x objective was employed at a fixed
 exposure to take high power images of 5 random deep dermal fields of
 view for computational analysis. 
 
-\begin{verbatim}
- [ Sanaz it seems to me that these 5 random fields would have been
- chosen within the red stained areas with collagen present. 
- I think we should say so]
-\end{verbatim}
-
-The images for each sample were then uploaded for quantitative analysis
+The five images for each sample were then uploaded for quantitative analysis
 via the ImagePro Plus (Media Cybernetics, USA) 7.1 software in which
 thresholds were set to count all pixels comprising of the red staining
-fibres in the PSR stained specimen against the total pixels. A mean was
-calculated for each of the specimens{\textquoteright} 5 images and
-graphed.
+fibres in the PSR stained specimen field.  This provided a measure of the area of the field occupoed by red stained collagen fibres.
+
+A slightly better measure of the total amount of collagen in the field could be obtained by allowing for the intensity of red staining of each pixel. This would be a measure density of collagen within the pixel and the depth of collagen through the thickness of the section.  The greyvalues for each pixel were converted to optical density, and the optical densities summed ( ie integrated) over all pixels in the field.
+A mean was calculated for each specimen, averaged over 5 fields, and graphed.
+The optical density data for each field subjected to analysis of variance to test for differences between wrinkle-free and wrinkled sheep, and , in Trial 2, to test for differences between on-wrinkle and between-wrinkle specimens within the wrinkled sheep.
+
+
 
 Polarised light was employed in order to try and determine the type of
 collagen present within each of the samples.
@@ -264,7 +262,7 @@ The Trial 2 sheep are the opposite. These were from commercial flocks, and here 
 
 The standard deviations were greater for wrinkled sheep, and greater for on-wrinkle than between-wrinkle specimens. Apparently wrinkled skins are more variable, at least in their collagen density. We did not test whether these differences in standard deviation were significant.
 
-The data show that there is more collagen in the lower dermis of wrinkled sheep than wrinkle-free sheep.  The actual size of the difference varied from 2.5 x in Trial 1 to 1.4 x in Trial 2. 
+The data and analyses show that there is more collagen in the lower dermis of wrinkled sheep than wrinkle-free sheep.  The actual size of the difference varied from 2.5 x in Trial 1 to 1.4 x in Trial 2. 
 Within wrinkled sheep there was no difference in amount of collagen between samples taken on a wrinkle or between wrinkles.
 
 
@@ -273,7 +271,8 @@ There are some questions hanging over these data.
 The data seem to be pixel greyvalues converted to optical density,
  then summed ( ie integrated) over all the pixels in the image. 
 The image used was probably the red component image.
-Maybe a threshold greyvalue was applied to accept only pixels exceeding a certain degree of redness.
+Maybe a threshold greyvalue was applied to accept only pixels
+ exceeding a certain degree of redness.
 
 Sanaz, can you please find out exactly what the data are?
 \end{verbatim}
