Results section on distribution and structure of collagen

--- a/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
+++ b/collagen-wrinkle-paper/nj-pgs-rewrite/histcollwrin.tex
@@ -278,7 +278,16 @@ Sanaz, can you please find out exactly what the data are?
 \end{verbatim}
 
 
-\subsubsection{Size of collagen fibrils}
+\subsubsection{Spatial location and structure of collagen}
+We have shown that there is more collagen in wrinkled sheep. We need to look and see if it occupies the same area of the dermis. We also need to investigate whether the arrangement of collagen fibres varies.
+
+The best images for these purposes were taken with a 10x objective. Figure~\ref{fig:he10x} shows images of specimens from two sheep, one being wrinkled (a between-wrinkle specimen) and one being wrinkle-free.
+\input{fighe10x.tex}
+The most obvious difference is that in the wrinkled sheep specimen the collagen extends up into the follicular region, there being conspicuous amounts of collagen in and around the follicle bulbs. In the wrinkle-free sheep there is very littly amount of collagen in amongst the follicle bulbs, and the collagen immediately below the bulbs is fine structured and presumably of a reticular type. 
+
+There is also a difference in structure. In the wrinkled sheep there are large pieces of very dense collagen ( judging by the intensity of staining)  in the lower dermis, and amongst the follicles. In the wrinkle-free sheep there are some dense pieces of collagen ( more further down in the dermis) but these are not as dense and not as numerous as in the wrinkled specimen. If we look back to the PSR stained images of Figure~\ref{fig:psr40x}, these observations are confirmed. We must note that we are viewing thin (3 micron) sections. For bundles of collagen to show as large continuous areas in these sections they must align with the direction of sectioning. Hence we see some fibre bundles that have been sectioned across, and these show as small entities, and some that have been sectioned along and these show as large entities. There are fewer large entities in the wrinkle-free specimens in both Figures~\ref{fig:psr40x} and ~\ref{fig:he10x}. This difference is even discernable in the images viewed with a 4x objective shown in Figure~\ref{fig:trial24xhe}
+
+We were not able to quantify these observations. The examples we have shown are from Trial 2, but the differences were consistent across both trials.
 
 \subsubsection{Type of collagen}
 
